test/sema/typeck/struct/unnamed-field-assignment-not-accessible.out
error: element is not accessible.
--> unnamed-field-assignment-not-accessible.dora:6:5
 | 
 | fn f(mut x: m::Foo, v: Int) {
 |     x.0 = v;
       ~~~
 | }
 | 
1 error found.
