test/sema/typeck/struct/unnamed-field-assignment-not-accessible.dora
mod m {
    pub struct Foo(Int, Bool)
}

fn f(mut x: m::Foo, v: Int) {
    x.0 = v;
}
